# gitit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
assets/css/: style.css
src/: config.rs  errors.rs  main.rs  update.rs  utils.rs
src/routes/: assets.rs  mod.rs  repo.rs
src/routes/templates/repo/: commit.html.liquid  commit_tree.html.liquid  index.html.liquid  list.html.liquid  text_file.html.liquid
